systemd: Hack to stop phantomjs from crashing
Phantomjs crashes with messages like

#3  0x0000000000c624fc in WebCore::LayoutState::isPaginated (this=0x0) at rendering/LayoutState.h:82
#4  0x0000000000c62598 in WebCore::RenderView::pushLayoutState (this=0x5834c28, renderer=0x5f6a368,
    offset=..., pageHeight=..., pageHeightChanged=false, colInfo=0x0) at rendering/RenderView.h:25

when trying to calculate if scrollbars are needed for the
motd pre. Hack around this by turning of overflow.

--- a/pkg/systemd/host.css
+++ b/pkg/systemd/host.css
@@ -360,4 +360,9 @@ a.disabled {
     padding: 0px;
     margin: 0px;
     white-space: pre-wrap;
+    max-height: 300px;
+}
+
+#motd.phantom {
+    overflow: hidden;
 }
